src/objects/loan_ffa__Journal_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>loan_ffa__Error_Code__c</fullName>
        <label>Error Code</label>
        <picklist>
            <picklistValues>
                <fullName>Service Fee Income GLA Not Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orig Fee Income GLA Not Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dishonor Fee Income GLA Not Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FFA Bank Not Linked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Not Found</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan_ffa__FFA_Journal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FFA Journal</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Journal Error Logs</relationshipLabel>
        <relationshipName>Journal_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Job_Run_At__c</fullName>
        <label>Job Run At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Journal Error Log</label>
    <nameField>
        <displayFormat>JEL-{00000000}</displayFormat>
        <label>Journal Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>